objects/Incident.object
<CustomObject>
    <fields>
        <fullName>CSM_Case_Origin__c</fullName>
        <formula>TEXT(Service_Request__r.Origin)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Ticket_Config_Item__c</fullName>
        <label>Ticket Config Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guidanz Classic</fullName>
                </value>
                <value>
                    <fullName>Guidanz Evolution</fullName>
                </value>
                <value>
                    <fullName>Marketplace / CSO Online Subscription Management Solution</fullName>
                </value>
                <value>
                    <fullName>Middleware</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                    <isActive>false</isActive>
                    <label>Marketplace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSM_Ticket_FSL_Report_a_problem_comment__c</fullName>
        <label>Ticket Reported Problem Comments</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSM_Ticket_IncidentSysID__c</fullName>
        <label>Ticket IncidentSysID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Ticket_Incident_Number__c</fullName>
        <externalId>true</externalId>
        <label>SNow/QSOL Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Ticket_Incident_URL__c</fullName>
        <label>Ticket Incident URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Ticket_Short_Description__c</fullName>
        <formula>Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Ticket_Work_Notes__c</fullName>
        <label>Ticket Work Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Ticket_URL__c</fullName>
        <formula>HYPERLINK( CSM_Ticket_Incident_URL__c, &apos;Click here for more details&apos;, &apos;Self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNow_Last_Synched_Date__c</fullName>
        <label>SNow Last Synched Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Now/HelpDeskTicket</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>